swagger setup and routes.rest complete
