# swagger.json
@@ -1,59 +1,164 @@
 {
   "swagger": "2.0",
   "info": {
-    "description": "class code activity\n",
-    "version": "1.0.0",
-    "title": "Class 5 activity"
+    "title": "Recipes API",
+    "description": "API for recipes",
+    "version": "1.0.0"
   },
-  "host": "cse341-class5.herokuapp.com",
+  "host": "https://recipe-api-ma9i.onrender.com",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "user",
-      "description": "Operations about user"
-    }
-  ],
   "schemes": ["https"],
   "paths": {
-    "/user": {
+    "/recipes/": {
       "get": {
-        "tags": ["user"],
-        "summary": "Calls name api",
-        "operationId": "reverse",
+        "description": "",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "ingredients": {
+                  "example": "any"
+                },
+                "directions": {
+                  "example": "any"
+                },
+                "cuisine": {
+                  "example": "any"
+                },
+                "chef": {
+                  "example": "any"
+                },
+                "creation": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/recipes/{id}": {
+      "get": {
+        "description": "",
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "name",
-            "in": "query",
-            "description": "The name to reverse",
+            "name": "id",
+            "in": "path",
             "required": true,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/ReversedResponse"
-            }
+            "description": "OK"
           },
-          "400": {
-            "description": "Invalid parameters supplied"
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "ingredients": {
+                  "example": "any"
+                },
+                "directions": {
+                  "example": "any"
+                },
+                "cuisine": {
+                  "example": "any"
+                },
+                "chef": {
+                  "example": "any"
+                },
+                "creation": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
-    }
-  },
-  "definitions": {
-    "ReversedResponse": {
-      "type": "object",
-      "properties": {
-        "reversed": {
-          "type": "string",
-          "example": "nahtaN"
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
         }
-      },
-      "description": "resp"
+      }
     }
   }
 }
